<resources>
    <string name="app_name">כרטיס ביקור דיגיטלי - יס פליז</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="logout">Log out</string>
    <string name="show_reports">Show reports</string>
    <string name="edit_black_list">Edit block list</string>
    <string name="notify_send">Notify sending</string>
    <string name="enable_service">Enable service</string>
    <string name="preference_file_key">com.sms.sendsms.PREFERENCE_FILE_KEY</string>
    <string name="is_service_running">is_service_running</string>
    <string name="is_enable_notifying">is_enable_notifying</string>
    <string name="add_from_contacts">Add from contacts</string>
    <string name="add_from_history">Add from history</string>
    <string name="empty">Empty</string>
    <string name="block_list">Block list</string>
    <string name="action_search">Search</string>
    <string name="ok">OK</string>
    <string name="sent_on">Sent on</string>
    <string name="contact_list">Contact list</string>
    <string name="history_calls">History calls</string>
    <string name="added_block">is successfully added to BlockUser</string>
    <string name="already_was_block">is already in Block user list</string>
    <string name="no_response">Couldn\'t login no response by server</string>
    <string name="msg_sent">Message sent to number</string>
    <string name="error_msg">Error message not sent.</string>
    <string name="no_service">Error No service.</string>
    <string name="error_pdu">Error Null PDU.</string>
    <string name="radio_off">Error Radio off.</string>
    <string name="unknown_error_sent_msg">Message not sent cause of unknown result</string>

    <string name="business">Business</string>
    <string name="business_name">Business Name</string>
    <string name="show">Show</string>
    <string name="color">Color</string>
    <string name="logo">Logo</string>
    <string name="choose_file">Choose file</string>
    <string name="bg_img">Background image</string>
    <string name="bg_text">Background text</string>
    <string name="bg_color">Background color</string>
    <string name="header">Header</string>
    <string name="show_color">Show Color</string>
    <string name="footer">Footer</string>
    <string name="color_icons">Color Icons</string>
    <string name="bg_icons">Background Icons</string>
    <string name="main_label_txt">Text in main label</string>
    <string name="type_here">Type here</string>
    <string name="label_text">Label text</string>
    <string name="mail">Mail</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linked_in">LinkedIn</string>
    <string name="google_plus">Google+</string>
    <string name="youtube">Youtube</string>
    <string name="phone">Phone</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="about_text_color">Color Page text About</string>
    <string name="website">Website</string>
    <string name="map">Map</string>
    <string name="pinterest">Pinterest</string>
    <string name="chat">Chat</string>
    <string name="android_app">Android App</string>
    <string name="user_plus">Save Contact</string>
    <string name="about_address">About Address</string>
    <string name="about_label">About Label</string>
    <string name="android_address">Android Address</string>
    <string name="android_label">Android Label</string>
    <string name="chat_label">Chat Label</string>
    <string name="fb_address">Facebook Address</string>
    <string name="fb_label">Facebook Label</string>
    <string name="gallery_address">Gallery Address</string>
    <string name="gallery_label">Gallery Label</string>
    <string name="google_plus_address">Google Plus Address</string>
    <string name="google_plus_label">Google Plus Label</string>
    <string name="linked_in_address">LinkedIn Address</string>
    <string name="linked_in_label">LinkedIn Label</string>
    <string name="mail_name">Mail Name</string>
    <string name="mail_label">Mail Label</string>
    <string name="map_address">Map Address</string>
    <string name="map_label">Map Label</string>
    <string name="phone_address">Phone Address</string>
    <string name="phone_label">Phone Label</string>
    <string name="pinterest_address">Pinterest Address</string>
    <string name="pinterest_label">Pinterest Label</string>
    <string name="logo_name">Logo Name</string>
    <string name="user_plus_label">User Plus Label</string>
    <string name="twt_address">Twitter Address</string>
    <string name="twt_label">Twitter Label</string>
    <string name="website_address">Website Address</string>
    <string name="website_label">Website Label</string>
    <string name="youtube_address">Youtube Address</string>
    <string name="youtube_label">Youtube Label</string>
    <string name="general">General</string>
    <string name="edit_card">Edit card</string>
    <string name="preview">Preview</string>
    <string name="preview_link">%1$s</string>
    <string name="menu_send_report">Send report</string>
    <string name="no_mail_client">There are no email clients installed.</string>
    <string name="card_items">Icons</string>
    <string name="update">Update</string>
    <string name="color_footer">Footer color</string>
    <string name="color_header">Header color</string>
    <string name="reset_label_color">Reset all label color</string>
    <string name="reset_icon_color">Reset all color icons</string>
    <string name="file_name">File name</string>
    <string name="loading">Loading…</string>
    <string name="downloading_img">Downloading image…</string>
    <string name="cant_download_img">For some reason couldn\'t download image</string>
    <string name="remove_bg">Remove background</string>
    <string name="uploading">Uploading image…</string>
    <string name="cant_upload">For some reason couldn\'t upload image.</string>
    <string name="settings">Settings</string>
    <string name="send_sms_period">Send sms to the same number.</string>
    <string name="everytime">Everytime</string>
    <string name="once_day">Once a day</string>
    <string name="once_week">Once a week</string>
    <string name="once_month">Once a month</string>
    <string name="updating_data">Updating data…</string>
    <string name="cant_update_data">For some reason couldn\'t update data.</string>
    <string name="cant_get_card_items">Couldn\'t get card items possible reason is that  you have no internet.</string>
    <string name="report_send_successfully">The report has been sent. Thank you for your feedback.</string>
    <string name="report_send_failed">The report has not been sent. Possible reason - no internet connection.</string>
    <string name="please_wait">Please wait...</string>
    <string name="dont_send_sms_contacts">Don\'t send SMS to existing contacts</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
</resources>
