<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="pref_screen_root"
                  android:icon="@mipmap/ic_launcher">

    <PreferenceCategory
        android:key="facebook"
        android:title="@string/facebook">

        <EditTextPreference
            android:key="fb_address"
            android:hint="@string/type_here"
            android:title="@string/fb_address"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="fb_label_color"
            android:title="@string/color"
            app:colorpicker_defaultColor="#f00"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="fb_icon_color"
            android:title="@string/color_icons"
            app:colorpicker_defaultColor="#f00"/>

        <EditTextPreference
            android:key="fb_label"
            android:hint="@string/type_here"
            android:title="@string/fb_label"/>

        <CheckBoxPreference
            android:key="if_facebook"
            android:title="@string/show"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
