<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="pref_screen_root"
                  android:icon="@mipmap/ic_launcher">

    <PreferenceCategory
        android:key="mail"
        android:title="@string/mail">

        <EditTextPreference
            android:key="mail_address"
            android:hint="@string/type_here"
            android:title="@string/mail_name"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="mail_label_color"
            android:title="@string/color"
            app:colorpicker_showAlpha="false"
            app:colorpicker_showHex="false"
            app:colorpicker_defaultColor="#f00"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="mail_icon_color"
            android:title="@string/color_icons"
            app:colorpicker_showAlpha="false"
            app:colorpicker_showHex="false"
            app:colorpicker_defaultColor="#f00"/>

        <EditTextPreference
            android:key="mail_label"
            android:hint="@string/type_here"
            android:title="@string/mail_label"/>

        <CheckBoxPreference
            android:key="ifmail"
            android:title="@string/show"
            android:defaultValue="false"/>

    </PreferenceCategory>


</PreferenceScreen>
