<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="pref_screen_root"
                  android:icon="@mipmap/ic_launcher">

    <PreferenceCategory
        android:key="android_app"
        android:title="@string/android_app">

        <EditTextPreference
            android:key="android_address"
            android:hint="@string/type_here"
            android:title="@string/android_address"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="android_label_color"
            android:title="@string/color"
            app:colorpicker_showAlpha="false"
            app:colorpicker_showHex="false"
            app:colorpicker_defaultColor="#f00"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="android_icon_color"
            android:title="@string/color_icons"
            app:colorpicker_showAlpha="false"
            app:colorpicker_showHex="false"
            app:colorpicker_defaultColor="#f00"/>

        <EditTextPreference
            android:key="android_label"
            android:hint="@string/type_here"
            android:title="@string/android_label"/>

        <CheckBoxPreference
            android:key="ifandroid"
            android:title="@string/show"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
