<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="pref_screen_root"
                  android:icon="@mipmap/ic_launcher">

    <PreferenceCategory
        android:key="@string/logo"
        android:title="@string/logo">

        <EditTextPreference
            android:key="logo_name"
            android:hint="@string/type_here"
            android:title="@string/logo_name"/>

        <Preference
            android:key="logo_file"
            android:title="@string/choose_file"
            android:summary="File name"/>

        <CheckBoxPreference
            android:key="if_logo"
            android:title="@string/show"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
