<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:key="pref_screen_root"
                  android:icon="@mipmap/ic_launcher">

    <PreferenceCategory
        android:key="user_plus"
        android:title="@string/user_plus">

        <com.rarepebble.colorpicker.ColorPreference
            android:key="userplus_label_color"
            android:title="@string/color"
            app:colorpicker_showAlpha="false"
            app:colorpicker_showHex="false"
            app:colorpicker_defaultColor="#f00"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:key="userplus_icon_color"
            android:title="@string/color_icons"
            app:colorpicker_showAlpha="false"
            app:colorpicker_showHex="false"
            app:colorpicker_defaultColor="#f00"/>

        <EditTextPreference
            android:key="userplus_label"
            android:hint="@string/type_here"
            android:title="@string/user_plus_label"/>

        <CheckBoxPreference
            android:key="ifuserplus"
            android:title="@string/show"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
